catgories swagger
